# physics-engine

./: .clang-format  CMakeLists.txt
include/: Camera.hpp  ProjectRoot.hpp  Shader.hpp
include/assimp/: revision.h
include/glad/: glad.h
include/model/: Mesh.hpp  Model.hpp  Texture.hpp  Vertex.hpp  WorldObject.hpp
resources/models/sphere/: sphere.mtl
resources/shaders/: basic_shader.frag  basic_shader.vert  debug_depth_quad.frag  orb_shader.frag  orb_shader.vert  radially_symmetrical_smooth_shader.vert  shader.frag  shader.vert  shadows.frag  shadows.vert  simple_depth_shader.frag  simple_depth_shader.vert
src/: Camera.cpp  glad.c  main.cpp
src/glad/: CMakeLists.txt
src/model/: CMakeLists.txt  Mesh.cpp  Model.cpp  WorldObject.cpp
